    message) onto the "Send Message" AclGui panel or the DummyAgent AclGui 
    panel.
  - You can select one or more agents in the AgentTree (left hand panel of the 
    RMA) and then drag and drop a file onto the tree.  The file should contain 
    a text representation of an ACL message.  The message will be sent to all 
    selected agents.


	
	
MAJOR CHANGES in JADE 2.2 ($Date$ $Name$)
======================================================	
- The class MessageTemplate has been modified in order to allow the
  creation of application-specific templates.
- Integrated the following modifications to the Sniffer Agent provided by 
  Robert Kessler and Griss Martin:
  - The performative is listed above the message line.
  - Above the message line is also truncated versions of the conversationID,
    inreplyto and replywith fields.
  - Messages are colored in the same color if it can be determined to be part
    of the same conversation.  It uses the three fields to "guess" that it is
    all part of the same conversation.
  - The agent box now can take longer names without overflowing spread over 
    2 lines (truncating the name if it exceeds 2 lines).
  - Clicking on the agent box will give you the full name of the agent.
  - The agents boxes at the top do not scroll when you scroll the window, so
    you can see which line is associated with which agent.
  - When the sniffer starts up, it looks for a <agentname>.inf file in the 
    connected directory.  If it doesn't find it there, it looks for the file
    in \<agentname>.inf.  This inf file contains a list of agent names that
    are to be immediately sniffed once the agent is born.  The agent names 
    are listed one name per line.
  - In the same .inf file you can store performative filtering information. 
    If you want all messages to appear then leave it blank.  Otherwise, 
    list the names of the performatives to actually see (the rest being 
    filtered out). I.e. agentfoo inform propose.